# PickAndPlace-Project

./: .gitignore  2025-01-13-18-47-01.bag  2025-01-19-22-42-29.bag  Readme.md  saveData.py
src/: .rosinstall  .rosinstall.bak
src/intera_sdk/intera_interface/scripts/: control_gripper.py
src/planning/: CMakeLists.txt  package.xml
src/planning/include/: planning.h
src/planning/src/: banda.cpp  pick.cpp  planning.cpp  run.cpp  test_gripper.cpp
src/sawyer_moveit/sawyer_moveit_config/config/: controllers.yaml  kinematics.yaml
src/sawyer_moveit/sawyer_moveit_config/launch/: demo.launch  move_group.launch  my_connect.launch  planning_context.launch
src/sawyer_moveit/sawyer_moveit_config/srdf/: sawyer.srdf.xacro
src/sawyer_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
src/sawyer_moveit_config2/config/: controllers.yaml  fake_controllers.yaml  gazebo_sawyer.urdf  joint_limits.yaml  ompl_planning.yaml  sawyer.srdf  stomp_planning.yaml
src/sawyer_moveit_config2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  my_connect.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sawyer_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/test_scripts/: CMakeLists.txt  detect_blocks.py  package.xml
src/test_scripts/launch/: simple_pick_and_place.launch
src/test_scripts/scripts/: add_objects_moveit.py  delete_cubes.py  kinematic.py  test_arm.py  test_arm_up.py
(+11 files in other folders)
